# OpenGL-Wrapper

./: .gitignore  CMakeLists.txt
include/glw/: Window.h  glw.h  pch.h
include/glwrp/: Buffer.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h  glwrp.h  pch.h
src/glw/: Window.cpp  glw.cpp
src/glwrp/: Buffer.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp  glwrp.cpp
tests/assets/shaders/: helloShader.glsl
tests/src/test/: main.cpp  pch.h
